# diff-scraper

./: .gitignore  CMakeLists.txt  MEMO  README.md  build.sh  diffscraper.sh  install_dependencies.sh  recipes.txt  requirements.txt  run-sample.sh
dataset/: useful-commands.txt
dataset/arxiv/: 1.html  1705.01782.html  1705.01784.html  1705.01809.html  1705.01813.html  1705.01817.html  1705.01821.html  1705.01823.html  1705.01826.html  1705.01833.html  1705.01842.html  1705.01849.html  1705.01854.html  1705.01861.html  1705.01862.html  1705.01864.html  1705.01876.html  1705.01877.html  1705.01879.html  1705.01887.html  1705.01906.html  1705.01908.html  1705.01920.html  1705.01921.html  1705.01923.html  1705.01925.html  2.html  3.html  5.html  urls.txt
dataset/blog-jamesclear.com/: 2016-annual-review.html  beginners-guide-deliberate-practice.html  behavior-change-paradox.html  best-articles-2016.html  deliberate-practice-myth.html  dont-start-from-scratch.html  five-step-creative-process.html  reading-comprehension-strategies.html  shadow-side.html  the-1-percent-rule.html  urls.txt
dataset/blog-ksc12545.blog.me/: index.html  index.html.1  index.html.2  index.html.3  index.html.4
dataset/blog-www.yoonsupchoi.com/: index.html  index.html.1  index.html.2  index.html.3  index.html.4  index.html.5  index.html.6  urls.txt
dataset/etherscan/: index.html  index.html.1  index.html.10  index.html.11  index.html.12  (+10 more)
diffscraper/: main.py
examples/: dataset.txt
src/: diffscraper.py  install_dependencies.sh
tests/: test_template.py  test_tokenizer.py  test_util.py
(+2383 files in other folders)
